Bug 251032. Make nsComboBoxControlFrames have their own space manager, because they don't care about floats in their parent. r+sr=dbaron